<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Accueil">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="83dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="11dp"
            android:text="@string/Accueil_text_ip"
            app:layout_constraintBottom_toBottomOf="@+id/textAreaIP"
            app:layout_constraintEnd_toStartOf="@+id/textAreaIP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/textAreaIP"
            android:layout_width="217dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:ems="10"
            android:hint="@string/Accueil_hint_ip"
            android:inputType="textPersonName"
            android:text="192.168.1.23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/buttonValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="154dp"
            android:layout_marginLeft="154dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="154dp"
            android:layout_marginRight="154dp"
            android:text="@string/Accueil_validate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAreaPort" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="326dp"
            android:layout_height="94dp"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="43dp"
            android:layout_marginRight="43dp"
            android:gravity="center_horizontal"
            android:text="@string/Accueil_titre"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="12dp"
            android:text="@string/Accueil_text_port"
            app:layout_constraintBottom_toBottomOf="@+id/textAreaPort"
            app:layout_constraintEnd_toStartOf="@+id/textAreaPort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/textAreaPort"
            android:layout_width="262dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:ems="10"
            android:hint="@string/Accueil_hint_port"
            android:inputType="textPersonName"
            android:text="4665"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textAreaIP" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.RemoteDesktopControl.AppBarOverlay" />

    <include
        android:id="@+id/include"
        layout="@layout/content_accueil"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>